# MarkDemo

./: CMakeLists.txt  README.md
include/: base_thread.h
libMark/: CMakeLists.txt
libMark/include/: big_mark_sudoku.h  mark.h  mark_LED.h  rect_location.h  save_picture.h  small_mark_sudoku.h
libMark/src/: big_mark_sudoku.cpp  mark.cpp  mark_LED.cpp  rect_location.cpp  save_picture.cpp  small_mark_sudoku.cpp
res/: mark_conf.yaml  recode.yaml
src/: base_thread.cpp  test.cpp
